--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+
 body{background-color: lightsalmon;
 
 }
-h1{
+
+h1.h2{
+font-family: 'Akaya Telivigala';
 text-align: center;
 
 }
