--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,24 @@ font-family: 'Akaya Telivigala';
 text-align: center;
 
 }
+table {
+    width: 900px;
+    background-color: rgb(235, 137, 46);
+    border: 2px solid black;
+  
+  }
+  th, td {
+    padding: 2x 2px 2px 2px;
+    }
+  
+  th {
+    font-size: 100%;
+    text-align: center;
+    border-bottom: 2px solid black;
+ 
+  }
+  tr {
+    text-align:  center;
+    color: black;
+    border: black;
+  }
